Fix checkbox element styles overlap with Yoast styles

--- a/src/app/tailwind.pcss
+++ b/src/app/tailwind.pcss
@@ -146,6 +146,27 @@
 	}
 }
 
+/* Checkbox */
+@layer components {
+	.yst-root {
+		.yst-checkbox {
+			.yst-checkbox__input {
+				@apply
+				yst-text-primary
+				yst-shadow-none
+	
+				focus:yst-ring-primary;
+
+				&:checked {
+					&::before {
+						@apply yst-hidden;
+					}
+				}
+			}
+		}
+	}
+}
+
 /* Radio Input */
 @layer components {
 	.yst-root {
